[gd_scene load_steps=13 format=2]

[ext_resource path="res://font/teams.tres" type="DynamicFont" id=1]
[ext_resource path="res://team.gd" type="Script" id=2]
[ext_resource path="res://font/SourceHanSerifTW-Medium.otf" type="DynamicFontData" id=3]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/組隊介面.png-3ae28d446900ad3bafec6cb5de8c408f.stex"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/組隊按鈕(兩個一樣).png-3adc44871eced423128f5ee26c124699.stex"

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/組隊資訊.png-e165173c5e0003c170c4dc023ef961a5.stex"

[sub_resource type="DynamicFont" id=7]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/關閉按鈕一版.png-0877cc0f427a3e02d4fee65289d0c79e.stex"

[node name="team" type="Sprite"]
script = ExtResource( 2 )

[node name="team_up" type="Sprite" parent="."]

[node name="background" type="Sprite" parent="team_up"]
position = Vector2( 158.481, 111.187 )
scale = Vector2( 0.375838, 0.375838 )
z_index = 1
texture = SubResource( 1 )

[node name="generate_label" type="Label" parent="team_up/background"]
margin_left = -24.3393
margin_top = 48.0
margin_right = 189.661
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_label" type="Label" parent="team_up/background"]
margin_left = -21.0
margin_top = 119.018
margin_right = 188.0
margin_bottom = 167.018
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_team_name_label" type="Label" parent="team_up/background"]
margin_left = -87.0
margin_top = -33.3214
margin_right = 185.0
margin_bottom = 10.6786
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="team_up/background"]
margin_left = -124.908
margin_top = -126.934
margin_right = 179.092
margin_bottom = -48.9333
custom_fonts/font = SubResource( 3 )
text = "輸入隊名並按下產生組隊代碼即可創建隊伍
若要加入隊伍請輸入組隊代碼
(以上兩者二擇一,每隊限2-10人)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generate_button_picture" type="Sprite" parent="team_up/background"]
position = Vector2( 224.722, 78.8169 )
scale = Vector2( 1.35557, 1.35557 )
texture = SubResource( 4 )

[node name="input_button_picture2" type="Sprite" parent="team_up/background"]
position = Vector2( 225.907, 148.454 )
scale = Vector2( 1.35557, 1.35557 )
texture = SubResource( 4 )

[node name="generate_Button" type="TextureButton" parent="team_up"]
margin_left = 238.0
margin_top = 133.0
margin_right = 252.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="team_up"]
margin_left = 148.0
margin_top = 151.0
margin_right = 233.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_Button" type="TextureButton" parent="team_up"]
margin_left = 238.0
margin_top = 160.0
margin_right = 251.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_team_name" type="LineEdit" parent="team_up"]
margin_left = 125.603
margin_top = 93.0
margin_right = 231.603
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="information" type="Sprite" parent="."]
visible = false

[node name="background" type="Sprite" parent="information"]
position = Vector2( 155.642, 127.481 )
scale = Vector2( 0.239141, 0.239141 )
texture = SubResource( 6 )

[node name="team_information" type="Label" parent="information"]
margin_left = 67.0
margin_top = 104.0
margin_right = 237.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_name" type="Label" parent="information"]
margin_left = 95.244
margin_top = 55.559
margin_right = 135.244
margin_bottom = 70.559
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_id" type="Label" parent="information"]
margin_left = 124.611
margin_top = 74.6078
margin_right = 164.611
margin_bottom = 88.6078
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_picture" type="Sprite" parent="."]
position = Vector2( 250.694, 42.8265 )
scale = Vector2( 0.733032, 0.75528 )
z_index = 1
texture = SubResource( 9 )

[node name="close" type="TextureButton" parent="."]
margin_left = 241.046
margin_top = 35.4454
margin_right = 256.046
margin_bottom = 50.4454
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="team_up/generate_Button" to="." method="_on_generate_Button_pressed"]
[connection signal="text_changed" from="team_up/input" to="." method="_on_input_text_changed"]
[connection signal="pressed" from="team_up/input_Button" to="." method="_on_input_Button_pressed"]
[connection signal="text_changed" from="team_up/input_team_name" to="." method="_on_input_team_name_text_changed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
